# IQ-Workshop

./: .env.example  .gitattributes  .gitignore  .spectral.yaml  CONVENTIONS.md  LICENSE  README.md  STATUS.md  context.md  docker-compose.yml  starter-prompt.md
.githooks/: pre-push
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  deploy-dev.yml
data/: grant-permissions.sql  local-init.sh  schema.sql  seed.sql
data/generator/: generate_seed.py
data/manuals/: arista-7280r3.md  ciena-6500.md  cisco-asr-9000.md  cisco-catalyst-9300.md  generate_manuals.py  juniper-mx960.md  juniper-qfx5120.md  nokia-7750-sr.md
docs/: architecture.md  guardrails.md  mcp-approval-modes.md  runbook.md  troubleshooting.md
docs/labs/: lab-0-environment-setup.md  lab-1-safe-tool-invocation.md  lab-2-structured-data-grounding.md  lab-3-governance-safety.md  lab-4-teams-publish.md  lab-5-agent-evaluation.md  lab-6-knowledge-grounding.md
evals/: README.md  dataset.json  run_evals.py  scorers.py  upload_to_foundry.py
foundry/: agent.yaml  tools.openapi.json
foundry/prompts/: system.md
infra/bicep/: main.bicep  parameters.dev.json  parameters.private.json
iq-foundry-iq-lab/: .env.example  CONVENTIONS.md  README.md  docker-compose.yml
iq-foundry-iq-lab/data/: schema.sql  seed.sql
iq-foundry-iq-lab/docs/: architecture.md  guardrails.md  troubleshooting.md
iq-foundry-iq-lab/foundry/: agent.yaml
iq-foundry-iq-lab/phases/: phase-1-infra-data.md  phase-2-api-agent.md
iq-foundry-iq-lab/samples/: playground-prompts.md
iq-foundry-iq-lab/services/api-tools/: .pre-commit-config.yaml  Dockerfile  pyproject.toml
iq-foundry-iq-lab/services/api-tools/app/: db.py  logging_config.py  main.py
iq-foundry-iq-lab/services/api-tools/tests/: __init__.py  test_edge_cases.py  test_openapi_spec.py  test_validation.py
phases/: phase-1-infra-data.md  phase-2-api-agent.md  phase-3-governance-observability.md  phase-4-polish-harden.md  phase-5-mcp.md  phase-6-enhancements.md
samples/: playground-prompts.md
samples/sample-outputs/: triage-example.json
scripts/: README.md  chat_agent.py  check-prereqs.sh  create_agent.py  deploy.ps1  deploy.sh  register-agent.ps1  register-agent.sh  seed-database.ps1  seed-database.sh  smoke-test.ps1  smoke-test.sh  upload_knowledge.py
services/api-tools/: .dockerignore  .pre-commit-config.yaml  Dockerfile  pyproject.toml  requirements.txt
services/api-tools/app/: db.py  (+5 more)
(+15 files in other folders)
