[project]
name = "iq-foundry-agent-lab-tools"
version = "0.1.0"
description = "Tool endpoints for the IQ Foundry hosted agent workshop"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0",
    "pyodbc>=5.1.0",
    "azure-identity>=1.15.0",
    "azure-monitor-opentelemetry>=1.3.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "pyright>=1.1.350",
]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 120
src = ["app", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "ARG",    # flake8-unused-arguments
    "RUF",    # ruff-specific rules
    "S",      # flake8-bandit (security)
    "A",      # flake8-builtins
    "T20",    # flake8-print
    "PT",     # flake8-pytest-style
]
ignore = [
    "S101",   # assert allowed in tests
    "S608",   # SQL string concatenation — false positives on parameterized queries
    "ARG001", # unused function argument — FastAPI deps may need them
    "B008",   # function call in default argument (FastAPI Depends)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "ARG001", "ARG002", "ARG005"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

# ---------------------------------------------------------------------------
# Pyright
# ---------------------------------------------------------------------------
[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
include = ["app"]
exclude = ["tests"]
reportMissingImports = "warning"
reportMissingTypeStubs = false
reportUnknownMemberType = false

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]
